#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([wamdtohtml], [0.1], [keisuke.miyako@4d.com])
AM_INIT_AUTOMAKE()
AC_CONFIG_SRCDIR([wamdtohtml.c])
# AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lmarkdown':
AC_CHECK_LIB([markdown], [mkd_compile])

# Checks for header files.
AC_CHECK_HEADERS([fcntl.h limits.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
AC_TYPE_PID_T

# Checks for library functions.
AC_FUNC_ALLOCA
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([fchdir getcwd isascii memmove memset strcasecmp strchr strdup strncasecmp strrchr strstr strtol strtoul])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
